--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -486,10 +486,10 @@
         <div class="large-5 small-12 columns">
             <div class="wd-heading text-left  " style="max-width: 100%">
                 <h2 style="margin:0;" class="title_c"> Get in touch </h2>
-                <p style="font-weight:300;font-size:17px;" class="sub_title_c">
+                <!-- <p style="font-weight:300;font-size:17px;" class="sub_title_c">
                     Efficiently unleash cross-media information without cross-media value. Quickly maximize timely
                     deliverable. Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo non habent
-                    claritatem insitamconsequat duis autem facilisis at vero eros </p>
+                    claritatem insitamconsequat duis autem facilisis at vero eros </p> -->
             </div>
             <div class="wd_empty_space" data-heightmobile="20" data-heighttablet="20" data-heightdesktop="20"
                  style="height: 20px;">
@@ -598,40 +598,38 @@
                         src="{{url_for('static', filename='images/inzacklogoimage.png')}}"
                                                  
                                                     alt="Inzack"></p>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of
-                            the day,
-                            going forward, a new normal that has evolved from generation.</p></div>
+                        <p>We believe that journey of the person needs to be understood rather than success or failure.</p></div>
                 </div>
             </div>
-            <div class="large-3 medium-6 columns">
-                <div id="text-4" class=" widget_text "><h4 class="block-title">Business Hours</h4>
-                    <div class="textwidget"><h6>Opining Days :</h6>
+            <!-- <div class="large-3 medium-6 columns">
+               <div id="text-4" class=" widget_text "><h4 class="block-title">Business Hours</h4>
+                     <div class="textwidget"><h6>Opining Days :</h6>
                         <div>Monday – Friday : 9am to 20 pm</div>
                         <div style="margin-bottom: 20px;">Saturday : 9am to 17 pm</div>
                         <h6>Vacations :</h6>
                         <div>All Sunday Days</div>
                         <div>All Official Holidays</div>
-                    </div>
+                    </div> 
                 </div>
-            </div>
-            <div class="large-3 medium-6 columns">
+            </div> -->
+            <div class="large-4 medium-6 columns">
                 <div id="text-5" class=" widget_text "><h4 class="block-title">Practice Areas</h4>
                     <div class="textwidget">
                         <div class="menu-left-menu-container">
                             <ul id="menu-left-menu" class="menu">
                                 <li id="menu-item-2515"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2515">
-                                    <a href="#">Services</a></li>
+                                    <a href="#">Corporates</a></li>
                                 <li id="menu-item-2516"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2516">
-                                    <a href="#">Strategic Planning</a></li>
+                                    <a href="#">Freemium Internet Users</a></li>
                                 <li id="menu-item-2517"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2517">
                                     <a href="#">Audit &amp; Assurance</a></li>
                                 <li id="menu-item-2518"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2518">
                                     <a href="#">Business Services</a></li>
-                                <li id="menu-item-2519"
+                                <!-- <li id="menu-item-2519"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2519">
                                     <a href="#">Sales &amp; Trading</a></li>
                                 <li id="menu-item-2520"
@@ -642,17 +640,20 @@
                                     <a href="#">Chemical Industry</a></li>
                                 <li id="menu-item-2522"
                                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2522">
-                                    <a href="#">Investment Management</a></li>
+                                    <a href="#">Investment Management</a></li> -->
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="large-3 medium-6 columns">
-                <div id="text-7" class=" widget_text "><h4 class="block-title">Instagram</h4>
+                <div id="text-7" class=" widget_text "><h4 class="block-title">Social Profile</h4>
                     <div class="textwidget"><p><img class="alignleft wp-image-3011 size-full"
                         src="{{url_for('static', filename='images/instagram.jpg')}}">
-                    </p></div>
+                    
+                    </p>
+                   
+                </div>
                 </div>
             </div>
         </section>
@@ -682,7 +683,7 @@
             <ul class="footer-social-media">
                 <li class=""><a href="https://www.facebook.com/vijay.sagi.982"><i class="fab fa-facebook-f"></i></a></li>
                 <li class=""><a href="https://www.linkedin.com/in/vijay-krishna-6681019/"><i class="fab fa-linkedin-in"></i></a></li>
-                <li class=""><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                <!-- <li class=""><a href="#"><i class="fab fa-google-plus-g"></i></a></li> -->
                 <!-- <li class=""><a href="#"><i class="fab fa-instagram"></i></a></li> -->
             </ul>
         </div>
